--- a/Projet/Gravity_Cancel.html
+++ b/Projet/Gravity_Cancel.html
@@ -116,7 +116,7 @@
         </p>
 
 
-        <img src="exo_anti_gravite.png" alt="bras zero gravite">
+        <img src="exo_anti_gravite.png" alt="exosquelette_zero_gravite">
             <div class="legend">
                     <p>Exosquelette Hercule de RB3D pour le militaire</p>
             </div> 
@@ -301,9 +301,9 @@ Q = equilibrageStatique(np.pi/2,0,float(0.5),0.3,0.2)
             du robot en fonction des capacités des servomoteurs. 
         </p>
 
-        <img src="detail_robot.png" alt="Dimensionnement">
+        <img src="detail_robot.png" alt="Dimensionnement_schema">
             <div class="legend">
-                    <p>Resultat du code Dimensionnement</p>
+                    <p>Dimensionnement schéma</p>
             </div> 
 
         <p>
@@ -630,7 +630,7 @@ print("theta: "+str(theta))   # angles moteurs
             <br>
         </p>
 
-        <img src="couple_courant.png" alt="Couple_Courant">
+        <img src="couple_courant.png" alt="graph_appro_Couple_Courant">
             <div class="legend">
                     <p>Resultat du code approximation courbe Couple-Courant</p>
             </div> 
@@ -720,7 +720,7 @@ plt.show()
             Pour liés les moteurs aux liens on utilise les cadres/frames spéciales Dynamixel.
          </p>
 
-         <img src="montage.png" alt="Montage">
+         <img src="montage.png" alt="Montage_dynamixel">
             <div class="legend">
                     <p>Exemple de cadre Dynamixel</p>
             </div> 
@@ -1038,5 +1038,6 @@ finally:
 </body>
 
 </html>
+
 
 
