--- a/Modelisation/Robotique_theorique/Controle_force.html
+++ b/Modelisation/Robotique_theorique/Controle_force.html
@@ -112,7 +112,7 @@
             contact avec son environnement.
         </p>
 
-        <img src="cobot.jpg" alt="robot parallele">
+        <img src="cobot.jpg" alt="robot cobot">
             <div class="legend">
                     <p>Cobots (Universal Robot) utilisé pour la soudure</p>
             </div> 
@@ -358,7 +358,7 @@
             Ces codes sont à utiliser ensemble et sont sur <b>Matlab</b> pour faciliter les calculs matriciels.
         </p>
 
-        <img src="robot_animation.gif" alt="inverse Dynamics">
+        <img src="robot_animation.gif" alt="Gif inverse Dynamics">
             <div class="legend">
                     <p>Gif Resultat 2 axes sans force exterieur </p>
             </div> 
@@ -757,6 +757,7 @@ end
 </body>
 
 </html>
+
 
 
 
