--- a/Modelisation/Robotique_theorique/Impedance_Admittance.html
+++ b/Modelisation/Robotique_theorique/Impedance_Admittance.html
@@ -177,7 +177,7 @@
           </p>
         </div>
 
-        <img src="robot_impedance.gif" alt="impedance"> 
+        <img src="robot_impedance.gif" alt="gif impedance"> 
             <div class="legend">
                     <p>Gif Resultat 2 axes controlé en impédance </p> 
             </div> 
@@ -645,6 +645,7 @@ end
 </body>
 
 </html>
+
 
 
 
