--- a/Modelisation/Robotique_theorique/Transformation_homogene.html
+++ b/Modelisation/Robotique_theorique/Transformation_homogene.html
@@ -419,7 +419,7 @@
 
     <p>avec un vecteur <em>[1,0,0]</em> d'origine <em>[0.25,0,1]</em>:
 
-  <img src="transforme_homogene_screen.jpg" alt="Image d'exemple transformation homogène">
+  <img src="transforme_homogene_screen.jpg" alt="exemple transformation homogène">
 <details >
 <summary > <b style="color: red;">Transformation homogène sur Python</b> 
     </summary >
@@ -585,6 +585,7 @@ plt.show()
 
 </body>
 </html>
+
 
 
 
