--- a/Projet/Balance.html
+++ b/Projet/Balance.html
@@ -393,7 +393,7 @@ except KeyboardInterrupt:
         </p>
 
         <video controls>
-          <source src="gimmball_vid.mp4" type="video/mp4">
+          <source src="gimball_vid.mp4" type="video/mp4">
           Votre navigateur ne supporte pas la lecture vidéo.
         </video>
         <div class="legend">
@@ -958,4 +958,5 @@ finally:
 </body>
 
 </html>
+
 
