--- a/Projet/Balance.html
+++ b/Projet/Balance.html
@@ -227,7 +227,7 @@ GYRO_ZOUT_H = 0x47
 # =========================================================
 # === INITIALISATION DU BUS I2C ===========================
 # =========================================================
-bus = smbus2.SMBus(3)           # Bus I2C (à adapter selon le matériel)
+bus = smbus2.SMBus(3)           # Bus I2C 
 bus.write_byte_data(MPU_ADDR, PWR_MGMT_1, 0)  # Réveille le MPU6050
 time.sleep(0.1)
 
@@ -365,7 +365,7 @@ try:
         # =========================
         # Écriture des angles dans un fichier texte
         # =========================
-        with open("/home/vcngfdhr/Documents/datagyro.txt", "w") as file:
+        with open("/home/Documents/datagyro.txt", "w") as file:
             file.write(f"{roll:.2f},{pitch:.2f}")
 
         time.sleep(0.01)
@@ -440,11 +440,6 @@ except KeyboardInterrupt:
         <summary > <b style="color: red;">Programme pour Gimball et Tracking sur Python</b>
             </summary >
         <pre><button class="copy-btn" onclick="copyCode()">Copier</button><code id="code-block">    
-# =====================================
-# Programme contrôle caméra + servos + gyro
-# Version commentée en français
-# =====================================
-
 import time
 import numpy as np
 from adafruit_servokit import ServoKit
@@ -459,7 +454,7 @@ import subprocess
 # Paramètres Matériels
 # =====================
 # Lancement du script gyroscope externe qui écrit les données dans un fichier
-p1 = subprocess.Popen(["sudo", "python3", "/home/vcngfdhr/Documents/gyro.py"])
+p1 = subprocess.Popen(["sudo", "python3", "/home /Documents/gyro.py"])
 
 # Initialisation du module PCA9685 pour contrôler les servos
 kit = ServoKit(channels=16)
@@ -471,9 +466,9 @@ ANGLE_MAX = 180
 STEP_DEG = 1
 
 # Fichiers de stockage des angles
-ANGLE_FILE = "/home/vcngfdhr/Documents/angle_cam.txt"
-REF_SERVO = "/home/vcngfdhr/Documents/gyro_ref.txt"
-GYRO_LIVE = "/home/vcngfdhr/Documents/datagyro.txt"
+ANGLE_FILE = "/home/Documents/angle_cam.txt"
+REF_SERVO = "/home/Documents/gyro_ref.txt"
+GYRO_LIVE = "/home/Documents/datagyro.txt"
 
 gyro_active = True  # Active la stabilisation gyroscopique
 
@@ -777,11 +772,6 @@ def update_frame_preview():
         <summary > <b style="color: red;">Correcteur balancier sur Python</b>
             </summary >
         <pre><button class="copy-btn" onclick="copyCode()">Copier</button><code id="code-block">    
-# ==============================================
-# Programme de contrôle PID pour moteurs pas-à-pas
-# Stabilisation via lecture du gyroscope (gyro.py)
-# ==============================================
-
 import lgpio
 import time
 import subprocess
@@ -792,7 +782,7 @@ import sys
 # Lancement du script gyro.py en parallèle.
 # Ce script écrit en continu les valeurs 'roll,pitch' sur la sortie standard.
 proc = subprocess.Popen(
-    ['python3', '/home/vcngfdhr/Documents/gyro.py'],
+    ['python3', '/home/Documents/gyro.py'],
     stdout=subprocess.PIPE,
     text=True,
     bufsize=1  # mode ligne par ligne
@@ -800,9 +790,9 @@ proc = subprocess.Popen(
 
 # --- Paramètres PID ---
 obj = 0              # valeur cible (pitch = 0°)
-Kp = 30              # gain proportionnel
-Kd = 10              # gain dérivé
-Ki = 100             # gain intégral
+Kp = 3               # gain proportionnel
+Kd = 0.1             # gain dérivé
+Ki = 10              # gain intégral
 
 u = 0                # sortie du PID
 u_max = 100          # saturation maximale
@@ -810,7 +800,7 @@ vitesse = 0          # temps entre impulsions step
 integral = 0         # mémoire intégrale
 past_err = 0         # erreur précédente
 maxSpeed = 0.001     # vitesse maximale
-minSpeed = 0.005     # vitesse minimale
+minSpeed = 0.01      # vitesse minimale
 
 # --- Définition des broches ---
 # Deux moteurs pas-à-pas, chacun avec STEP, DIR, ENABLE
@@ -958,5 +948,6 @@ finally:
 </body>
 
 </html>
+
 
 
