--- a/Vision/Contours.html
+++ b/Vision/Contours.html
@@ -88,10 +88,19 @@
     <aside class="sidebar">
       <h3>Vision par Ordinateur</h3>
       <ul>
+        <ul>
         <li><a href="Transformation_Morpho.html">Transformation Morphologique</a></li>
         <li><a href="Pattern_Reconnaissance.html">Reconnaissance de motifs </a></li>
         <li><a href="Derive.html">Dérivé</a></li>
-        <li><a href="Contours.html" class="active">Contours</a></li>
+        <li><a href="Hough.html">Transformé de Hough </a></li>
+        <li><a href="Extract_line.html">Extraction de lignes</a></li>
+        <li><a href="Convex_hull.html">Enveloppe convexe</a></li>
+        <li><a href="polygone.html">Distance aux contours & Moments</a></li>
+        <li><a href="remappinge.html">Remapping</a></li>
+        <li><a href="affine_dft.html" >Transformation affine & DFT</a></li>
+        <li><a href="Watershed.html" class="active">Algorithme Watershed</a></li>
+
+      </ul>
       </ul>
     </aside> 
 
@@ -332,3 +341,4 @@ plt.imshow(copy)
 </body>
 
 </html>
+
