--- a/Vision/Extract_line.html
+++ b/Vision/Extract_line.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Extraction de lignes</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 
   <script>
   // Load navbar dynamically from external file
-  fetch("/navbar.html")
+  fetch("navbar_vision.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -89,11 +89,16 @@
       <h3>Vision par Ordinateur</h3>
       <ul>
         <ul>
-        <li><a href="/Vision/Transformation_Morpho.html">Transformation Morphologique</a></li>
-        <li><a href="/Vision/Pattern_Reconnaissance.html">Reconnaissance de motifs </a></li>
-        <li><a href="/Vision/Derive.html">Dérivé</a></li>
-        <li><a href="/Vision/Hough.html">Transformé de Hough </a></li>
-        <li><a href="/Vision/Extract_line.html" class="active">Extraction de lignes</a></li>
+        <li><a href="Transformation_Morpho.html">Transformation Morphologique</a></li>
+        <li><a href="Pattern_Reconnaissance.html">Reconnaissance de motifs </a></li>
+        <li><a href="Derive.html">Dérivé</a></li>
+        <li><a href="Hough.html">Transformé de Hough </a></li>
+        <li><a href="Extract_line.html">Extraction de lignes</a></li>
+        <li><a href="Convex_hull.html">Enveloppe convexe</a></li>
+        <li><a href="polygone.html">Distance aux contours & Moments</a></li>
+        <li><a href="remappinge.html">Remapping</a></li>
+        <li><a href="affine_dft.html" >Transformation affine & DFT</a></li>
+        <li><a href="Watershed.html" class="active">Algorithme Watershed</a></li>
 
       </ul>
       </ul>
@@ -123,7 +128,7 @@
         Après l’érosion, la dilatation est appliquée avec le même kernel. Elle permet de
         <strong>restaurer l’épaisseur</strong> des structures qui ont survécu à l’érosion, sans faire réapparaître
         celles qui ont été éliminées. Pour l’enchaînement érosion + dilatation on parle aussi d'ouverture
-        (voir <a href="/Vision/Transformation_Morpho.html">Transformation Morphologique</a>).
+        (voir <a href="Transformation_Morpho.html">Transformation Morphologique</a>).
         </p>
 
         <p>
@@ -133,7 +138,7 @@
         <strong>kernel vertical</strong>.
         </p>
 
-        <img src="/Vision/ligne.jpg"> 
+        <img src="ligne.jpg"> 
         <div class="legend">
             <p>
                 Avant et après l'extraction de ligne <b>Vertical</b> 
@@ -205,4 +210,5 @@ plt.show()
 </footer>
 
 </body>
+
 </html>
