--- a/Vision/Hough.html
+++ b/Vision/Hough.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Hough</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 
   <script>
   // Load navbar dynamically from external file
-  fetch("/navbar.html")
+  fetch("navbar_vision.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -609,4 +609,5 @@ plt.axis('off')
 </footer>
 
 </body>
+
 </html>
