--- a/Vision/Pattern_Reconnaissance.html
+++ b/Vision/Pattern_Reconnaissance.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Reconnaissance de motifs</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 
   <script>
   // Load navbar dynamically from external file
-  fetch("/navbar.html")
+  fetch("navbar_vision.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -88,9 +88,19 @@
     <aside class="sidebar">
       <h3>Vision par Ordinateur</h3>
       <ul>
-        <li><a href="/Vision/Transformation_Morpho.html">Transformation Morphologique</a></li>
-        <li><a href="/Vision/Pattern_Reconnaissance.html" class="active">Reconnaissance de motifs </a></li>
-        <li><a href="/Vision/Derive.html">Dérivé</a></li>
+        <ul>
+        <li><a href="Transformation_Morpho.html">Transformation Morphologique</a></li>
+        <li><a href="Pattern_Reconnaissance.html">Reconnaissance de motifs </a></li>
+        <li><a href="Derive.html">Dérivé</a></li>
+        <li><a href="Hough.html">Transformé de Hough </a></li>
+        <li><a href="Extract_line.html">Extraction de lignes</a></li>
+        <li><a href="Convex_hull.html">Enveloppe convexe</a></li>
+        <li><a href="polygone.html">Distance aux contours & Moments</a></li>
+        <li><a href="remappinge.html">Remapping</a></li>
+        <li><a href="affine_dft.html" >Transformation affine & DFT</a></li>
+        <li><a href="Watershed.html" class="active">Algorithme Watershed</a></li>
+
+      </ul>
       </ul>
     </aside>
 
@@ -145,7 +155,7 @@
         <h1>
           Exemples
         </h1>
-        <img src="/Vision/mbappe_template.png">
+        <img src="mbappe_template.png">
         <div class="legend">
             <p>
                 Template 
@@ -190,7 +200,7 @@ plt.show()
         </code></pre>
       </details>
 
-      <img src="\Vision\template_matching_result.png" alt="Resultats Matching">
+      <img src="template_matching_result.png" alt="Resultats Matching">
         <div class="legend">
             <p>
                 Resultats differents Matching
@@ -263,4 +273,5 @@ for meth in methods:
 </footer>
 
 </body>
+
 </html>
