--- a/Vision/Vision_ordinateur.html
+++ b/Vision/Vision_ordinateur.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Vision par Ordinateur</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -11,7 +11,7 @@
   <div id="navbar"></div>
   <script>
   // Load navbar dynamically from external file
-  fetch("/navbar.html")
+  fetch("navbar_vision.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -148,3 +148,4 @@
 
 </body>
 </html>
+
