--- a/Vision/polygone.html
+++ b/Vision/polygone.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Distance aux contours & Moments</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 
   <script>
   // Load navbar dynamically from external file
-  fetch("/navbar.html")
+  fetch("navbar_vision.html")
     .then(response => response.text())  // Read the content as text
     .then(data => {
       // Insert the navbar HTML into the page
@@ -89,13 +89,16 @@
       <h3>Vision par Ordinateur</h3>
       <ul>
         <ul>
-        <li><a href="/Vision/Transformation_Morpho.html">Transformation Morphologique</a></li>
-        <li><a href="/Vision/Pattern_Reconnaissance.html">Reconnaissance de motifs </a></li>
-        <li><a href="/Vision/Derive.html">Dérivé</a></li>
-        <li><a href="/Vision/Hough.html">Transformé de Hough </a></li>
-        <li><a href="/Vision/Extract_line.html">Extraction de lignes</a></li>
-        <li><a href="/Vision/Convex_hull.html">Enveloppe convexe</a></li>
-        <li><a href="/Vision/polygone.html" class="active">Distance aux contours & Moments</a></li>
+        <li><a href="Transformation_Morpho.html">Transformation Morphologique</a></li>
+        <li><a href="Pattern_Reconnaissance.html">Reconnaissance de motifs </a></li>
+        <li><a href="Derive.html">Dérivé</a></li>
+        <li><a href="Hough.html">Transformé de Hough </a></li>
+        <li><a href="Extract_line.html">Extraction de lignes</a></li>
+        <li><a href="Convex_hull.html">Enveloppe convexe</a></li>
+        <li><a href="polygone.html">Distance aux contours & Moments</a></li>
+        <li><a href="remappinge.html">Remapping</a></li>
+        <li><a href="affine_dft.html" >Transformation affine & DFT</a></li>
+        <li><a href="Watershed.html" class="active">Algorithme Watershed</a></li>
 
       </ul>
       </ul>
@@ -110,7 +113,7 @@
         </p>
 
 
-        <img src="/Vision/poly_random.png">
+        <img src="poly_random.png">
         <div class="legend">
             <p>
                 Polygone quelconque
@@ -128,7 +131,7 @@
             interpreter comme des gradient et utiliser ces information pour d'autres calculs.
         </p>
 
-         <img src="/Vision/poly.png">
+         <img src="poly.png">
         <div class="legend">
             <p>
                 Gradient de distanhce au polygone (avec plus grand cercle inscrit calculé à partir de <em>minMaxLoc</em>)
@@ -333,7 +336,7 @@ plt.show()
     </p>
 
 
-      <img src="/Vision/moment.png">
+      <img src="moment.png">
         <div class="legend">
             <p>
                 Centre de masse du polygone
@@ -456,4 +459,5 @@ plt.show()
 </footer>
 
 </body>
+
 </html>
